--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.57.0",
     "@tailwindcss/vite": "^4.1.17",
+    "antd": "^6.0.1",
     "lucide-react": "^0.555.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.6",
