--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "antd": "^6.0.1",
     "lucide-react": "^0.555.0",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
