--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,16 @@
     "@clerk/clerk-react": "^5.57.0",
     "@tailwindcss/vite": "^4.1.17",
     "antd": "^6.0.1",
+    "hot": "^0.0.7",
     "lucide-react": "^0.555.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.6",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "toast": "^0.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
